# diabetes-control-app

./: .gitignore  README.md
.github/: pr.yml  root.yml
.github/workflows/: pr.yml
diabetApi/: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.dev.yml  docker-compose.yml  manage.py  pyproject.toml
diabetApi/.github/workflows/: pr.yml
diabetApi/core/: conftest.py  manage.py
diabetApi/core/accounts/: models.py
diabetApi/core/accounts/migrations/: 0001_initial.py
diabetApi/core/accounts/tests/fixtures/: __init__.py  users.py
diabetApi/core/auth/: serializers.py  urls.py  views.py
diabetApi/core/core/utils/: cryptography.py  misc.py  pytest.py  types.py
diabetApi/core/diabetApi/: asgi.py  settings.py  urls.py  wsgi.py
diabetApi/core/diabetApi/settings/: __init__.py  base.py  envvars.py  logging.py
diabetApi/core/diabetApi/settings/templates/: settings.dev.py  settings.unittests.py
diabetApi/core/diabetApi/tests/fixtures/: __init__.py  misc.py
diabetApi/core/glucoseLevelApp/: apps.py  models.py  serializers.py  urls.py  views.py
diabetApi/core/glucoseLevelApp/migrations/: 0001_initial.py  0002_glucoselevel_user.py  0003_alter_glucoselevel_user.py
diabetApi/core/glucoseLevelApp/tests/: test_rest_api.py
diabetApi/core/glucoseLevelApp/tests/fixtures/: __init__.py  glucoseLevels.py
diabetApi/core/insulineDozes/: apps.py  models.py  serializers.py  urls.py  views.py
diabetApi/core/insulineDozes/migrations/: 0001_initial.py  0004_doze_user.py
diabetApi/core/insulineDozes/tests/: test_rest_api.py
diabetApi/core/insulineDozes/tests/fixtures/: __init__.py  insulineDozes.py
diabetApi/core/mealApp/: apps.py  models.py  serializers.py  urls.py  views.py
diabetApi/core/mealApp/migrations/: 0001_initial.py  0002_dish_user.py
diabetApi/core/mealApp/tests/: test_rest_api.py
diabetApi/core/mealApp/tests/fixtures/: __init__.py  dishes.py  meals.py
diabetApi/diabetApi/: asgi.py  settings.py  urls.py
diabetApi/glucoseLevelApp/: apps.py  models.py  serializers.py  urls.py  views.py
diabetApi/glucoseLevelApp/migrations/: 0001_initial.py
diabetApi/insulineDozes/: apps.py  models.py  serializers.py  urls.py  views.py
diabetApi/insulineDozes/migrations/: 0001_initial.py  0002_doze_type.py  0003_alter_doze_description_alter_doze_timestamp.py
diabetApi/mealApp/: serializers.py  urls.py  views.py
diabetApi/mealApp/migrations/: 0001_initial.py
diabetApi/scripts/: entrypoint.sh  production_data.py
diabetFrontend/: README.md  angular.json  package-lock.json  package.json
diabetFrontend/src/: index.html  main.ts  styles.css  styles.scss
diabetFrontend/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  auth-guard.guard.ts
diabetFrontend/src/app/dialog-form/: dialog-form.component.css  dialog-form.component.html  dialog-form.component.spec.ts  dialog-form.component.ts
diabetFrontend/src/app/dishes/: dishes.component.css  dishes.component.html  dishes.component.scss  dishes.component.spec.ts  dishes.component.ts
(+132 files in other folders)
