[tool.poetry]
name = "diabetapi"
version = "0.1.0"
description = ""
authors = ["Mariusz Paluch <mariuszpaluch001@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.2.0"
django-filter = "^23.3"
django-split-settings = "^1.2.0"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
pyproject-flake8 = "^6.1.0"
colorlog = "^6.7.0"

[tool.isort]
line_length = 119
multi_line_output = 5

[tool.yapf]
align_closing_bracket_with_visual_indent = true
based_on_style = "google"
coalesce_brackets = true
column_limit = 119
dedent_closing_brackets = true

[tool.flake8]
max-line-length = 120
exclude = [".git", "__pycache__", "**/migrations/*", ".mypy_cache", "myvenv"]
extend-ignore = ["C101", "A002"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
