[tool.poetry]
name = "diabetapi"
version = "0.1.0"
description = ""
authors = ["Mariusz Paluch <mariuszpaluch001@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "core" }]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.2.0"
django-filter = "^23.3"
django-split-settings = "^1.2.0"
pyyaml = "^6.0.1"
pydantic = "^2.4.2"
pynacl = "^1.5.0"
psycopg2-binary = "^2.9.9"
daphne = "^4.0.0"
pytest = "^7.4.2"
pytest-xdist = "^3.3.1"
pytest-django = "^4.5.2"
model-bakery = "^1.16.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
pyproject-flake8 = "^6.1.0"
colorlog = "^6.7.0"

[tool.isort]
line_length = 119
multi_line_output = 5

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.diabetApi.settings"
django_find_project = false
python_files = "test_*.py"
testpaths = ["cooking_core"]
filterwarnings = "ignore::DeprecationWarning:^(?!node\\.).*:"

[tool.yapf]
align_closing_bracket_with_visual_indent = true
based_on_style = "google"
coalesce_brackets = true
column_limit = 119
dedent_closing_brackets = true

[tool.flake8]
max-line-length = 120
exclude = [".git", "__pycache__", "**/migrations/*", ".mypy_cache", "myvenv"]
extend-ignore = ["C101", "A002"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
